      formatter.  This makes it available to all event watchers. [github 118]
    * history is now posted events before the formatter.  This lets the
      formatter ask the history object about the test state.
    * INNER_accept_event and INNER_accept_result are now gone from the
      Formatter.  Write accept_event and accept_result normally.

    New Features
    * Added Test::Builder2::CanLoad to protect $! and $@ from tests loading
      modules internally.
    * Added Test::Builder2::Tester to test Test:: modules independent of
      their format. [github 112]
    * Added Test::Builder2::History->plan to capture the plan event so
      builders don't have to

    Bug Fixes
    * More $@ and $! protection.
    * Test::Builder now works with non-TAP formatters (or no formatter at all)


2.00_05  Mon, 24 Jan 2011 14:52:27 +1000
    Bug Fix
    * reset() was not grabbing a fresh copy of STDOUT and STDERR

    Test Fix
    * Fixed t/Builder/fork_with_new_stdout.t on Windows.


2.00_04  Tue Jan 18 11:50:48 EST 2011
    Test Fix
    * Work around a qr// bug in Debian etch's perl in t/Builder2/NoWarnings.t
    * Tests looking for Mouse can now correctly find it.

    New Features
    * Added a Log event (nothing using it yet)
    * Added a Comment event (nothing using it yet)

    Bug Fixes
    * Upgraded Mouse to 0.87
    * Fixed the SimpleHTML example
    * TB2::Streamer::TAP->error_fh could get accidentally initialized
      to undef.


2.00_03  Mon Jan 10 09:38:22 EST 2011
    Test Fix
    * Casing mistake in t/CanDupFilehandles.t


2.00_02  Sun Jan  9 21:20:30 EST 2011
    Second alpha release of Test::Builder2.
    Technology Demonstrator.
    Design complete.
    Threads broken.
    Subtests broken.
    Test::Builder converted to use Test::Builder2 infrastructure.
    Let's see how much of CPAN this breaks.


2.00_01  Mon Sep  6 14:42:38 2010 -0700
    First alpha release of Test::Builder2.
    Technology Preview.
    Very incomplete.

